# GaussianShader

./: environment.yml  main.py  pyproject.toml  render.py
.devcontainer/: Dockerfile  devcontainer.json
SIBR_viewers/src/projects/dataset_tools/preprocess/fullColmapProcess/: textureOnly.py
SIBR_viewers/src/projects/dataset_tools/preprocess/realityCaptureTools/: rc_tools.py
SIBR_viewers/src/projects/dataset_tools/scripts/: processRC.py
gaussian_renderer/: __init__.py
scene/: dataset_readers.py  gaussian_model.py
scene/NVDIFFREC/renderutils/: ops.py
