[project]
name = "gaussianshader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=2.4.2",
    "torch>=2.10.0",
    "diff-gaussian-rasterization",
    "torchvision>=0.25.0",
    "scikit-image>=0.26.0",
    "plyfile>=1.1.3",
    "open3d>=0.19.0",
    "nvdiffrast",
    "simple-knn",
    "glfw>=2.10.0",
    "pyopengl>=3.1.10",
    "opencv-python>=4.13.0.90",
    "myst-parser>=5.0.0",
    "PySide6<6.10",
    "pyseq>=0.9.0",
    "pymeshlab>=2025.7.post1",
    "ninja>=1.13.0",
]

[tool.uv.sources]
diff-gaussian-rasterization = { git = "https://github.com/graphdeco-inria/diff-gaussian-rasterization.git", rev = "59f5f77e3ddbac3ed9db93ec2cfe99ed6c5d121d" }
nvdiffrast = { git = "https://github.com/NVlabs/nvdiffrast.git", rev = "253ac4fcea7de5f396371124af597e6cc957bfae" }
simple-knn = { git = "https://github.com/camenduru/simple-knn.git", rev = "60f461f4a56b7967e5d8045bf92f8c33f36976d0" }
# meshroom = { git = "https://github.com/alicevision/Meshroom.git", rev = "024b6f398c67bec4968a29a2c5744e49e2bab9b8" }

[tool.uv.extra-build-dependencies]
diff-gaussian-rasterization = ["torch", "numpy"]
nvdiffrast = ["torch"]
simple-knn = ["torch"]
# psutil>=5.6.7
# PySide6==6.8.3
# markdown==2.6.11
# requests==2.32.4
# pyseq==0.9.0
# meshroom = [
#     "cx_Freeze",
#     "numpy",
#     "PySide6>=6.0.0",
#     "psutil>=5.6.7",
#     "markdown>=2.6.11",
#     "requests>=2.32.4",
#     "pyseq>=0.9.0",
# ]
